# masto-rss

./: .dockerignore  .gitignore  2025-12-13-this-session-is-being-continued-from-a-previous-co.txt  Dockerfile  README.md  TESTING.md  TEST_SUMMARY.md  bot.py  docker-compose.yml  failed_logs.txt  failed_logs_new.txt  failed_logs_optin.txt  generate_messages.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.in  requirements.txt  sarcastic_messages.txt  test_bot.py  test_integration.py
.github/workflows/: ci.yml  docker-publish.yml  masto-rss.yml  test.yml
